Mobile overflow issue fix.

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ html body {
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x:  hidden;
 }
 
 article,
